--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URL="mongodb://localhost:27017/realTimeChatApp"
+MONGODB_URL="mongodb+srv://amarnadh65:Amar%409020@cluster0.et3nq.mongodb.net/?retryWrites=true&w=majority"
 PORT=3000
